--- a/design/nested.html
+++ b/design/nested.html
@@ -61,7 +61,7 @@
                 dnd-effect-allowed="copy"
                 dnd-copied="item.id = item.id + 1"
                 >
-                <button type="button" class="btn btn-default btn-lg" disabled="disabled">{{item.type}}</button>
+                <button type="button" class="btn btn-default btn-lg">{{item.type}}</button>
             </li>
         </ul>
     </div>
