--- a/design/nested-frame.html
+++ b/design/nested-frame.html
@@ -67,15 +67,22 @@
 
 </div>
 
-<!-- Main area with dropzones and source code -->
+<!-- Main area with dropzone and source code -->
 <div class="col-md-10">
     <div class="row">
-        <div ng-repeat="(zone, list) in models.dropzones" class="col-md-6">
-            <div class="dropzone box box-yellow">
-                <!-- The dropzone also uses the list template -->
-                <h3>Designs</h3>
-                <div ng-include="'list.html'"></div>
-            </div>
+        <div class="dropzone box box-yellow">
+            <!-- The dropzone also uses the list template -->
+            <h3>Designs</h3>
+            <ul dnd-list="models.dropzone">
+		        <li ng-repeat="item in models.dropzone"
+		            dnd-draggable="item"
+		            dnd-effect-allowed="move"
+		            dnd-moved="list.splice($index, 1)"
+		            dnd-selected="models.selected = item"
+		            ng-class="{selected: models.selected === item}"
+		            ng-include="item.type + '.html'">
+		        </li>
+    		</ul>
         </div>
     </div>
 
