--- a/design/index.html
+++ b/design/index.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8">
     <title>Design</title>
 
-    <!-- angular is the only dependency! -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
     <script src="angular-drag-and-drop-lists.js"></script>
-
-    <!-- Stuff that is only required in this demo (no need to copy) -->
+	<script src="design.module.js"></script>
+    <script src="design.ctrl.js"></script>
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="design.css" />
-
-    <script src="demo-framework.js"></script>
-    <script src="nested.js"></script>
-
 </head>
 <body data-ng-app="design" data-ng-controller="designCtrl">
     <div class="container">
@@ -31,28 +27,28 @@
 			<!-- This template is responsible for rendering a container element. It uses
 		     the above list template to render each container column -->
 			<script type="text/ng-template" id="container.html">
-    <div class="container-element box box-blue">
-        <h3>Design {{item.id}}</h3>
-        <div class="column" ng-repeat="list in item.columns">
-<ul dnd-list="list">
-        <li ng-repeat="item in list"
-            dnd-draggable="item"
-            dnd-effect-allowed="move"
-            dnd-moved="list.splice($index, 1)"
-            dnd-selected="models.selected = item"
-            ng-class="{selected: models.selected === item}"
-            ng-include="item.type + '.html'">
-        </li>
-    </ul>
-		</div>
-        <div class="clearfix"></div>
-    </div>
-	</script>
+    			<div class="container-element box box-blue">
+        			<h3>Design {{item.id}}</h3>
+        			<div class="column" ng-repeat="list in item.columns">
+						<ul dnd-list="list">
+        					<li ng-repeat="item in list"
+            					dnd-draggable="item"
+            					dnd-effect-allowed="move"
+            					dnd-moved="list.splice($index, 1)"
+            					dnd-selected="models.selected = item"
+            					ng-class="{selected: models.selected === item}"
+            					ng-include="item.type + '.html'">
+        					</li>
+    					</ul>
+					</div>
+        			<div class="clearfix"></div>
+    			</div>
+			</script>
 		
 			<!-- Template for a normal list item -->
 			<script type="text/ng-template" id="item.html">
-    <div class="item">Component {{item.id}}</div>
-	</script>
+				<div class="item">Component {{item.id}}</div>
+			</script>
 		
 			<!-- Sidebar -->
 			<div class="col-md-2">
