--- a/design/index.html
+++ b/design/index.html
@@ -84,7 +84,7 @@
 						<li data-ng-repeat="item in models.designs"
 							dnd-draggable="item"
 							dnd-effect-allowed="move"
-							dnd-moved="list.splice($index, 1)"
+							dnd-moved="models.designs.splice($index, 1)"
 							dnd-selected="models.selected = item"
 							data-ng-class="{selected: models.selected === item}"
 							data-ng-include="item.type + '.html'"></li>
