--- a/design/index.html
+++ b/design/index.html
@@ -47,7 +47,7 @@
 		
 			<!-- Template for a normal list item -->
 			<script type="text/ng-template" id="item.html">
-				<div class="item">Component {{item.id}}</div>
+				<div class="feature">Feature {{item.id}}</div>
 			</script>
 		
 			<!-- Sidebar -->
