--- a/design/index.html
+++ b/design/index.html
@@ -66,7 +66,8 @@
 			            					dnd-effect-allowed="move"
 			            					dnd-moved="design.features.splice($index, 1)"
 			            					dnd-selected="models.selected = feature"
-			            					data-ng-class="{selected: models.selected === feature}">
+			            					data-ng-class="{selected: models.selected === feature}"
+			            					class="horizontal">
 											<div class="feature">{{feature.id}}</div>
 			        					</li>
 			    					</ul>
