--- a/design/index.html
+++ b/design/index.html
@@ -16,7 +16,7 @@
 </head>
 <body data-ng-app="design" data-ng-controller="designCtrl">
     <div class="container">
-        <div class="design row">
+        <div class="row">
 			<!-- Sidebar -->
 			<div class="col-md-2">
 				<div class="toolbox box box-grey box-padding">
@@ -57,7 +57,7 @@
 							data-ng-class="{selected: models.selected === design}">
 							<div class="container-element box box-blue">
 			        			<h3>Design {{design.id}}</h3>
-			        			<div class="column">
+			        			<div class="feature-panel">
 									<ul dnd-list="design.features"
 										dnd-allowed-types="['feature']">
 			        					<li data-ng-repeat="feature in design.features"
