--- a/design/index.html
+++ b/design/index.html
@@ -27,7 +27,7 @@
 							dnd-draggable="item"
 							dnd-effect-allowed="copy"
 							dnd-copied="item.id = item.id + 1">
-							<button type="button" class="btn btn-default btn-lg">{{item.typeName}}</button>
+							<button type="button" class="btn btn-default btn-lg">{{item.type}}</button>
 						</li>
 					</ul>
 				</div>
