Made UI more bootstrapy.

--- a/design/index.html
+++ b/design/index.html
@@ -19,68 +19,63 @@
         <div class="row">
 			<!-- Sidebar -->
 			<div class="col-md-2">
-				<div class="toolbox box box-grey box-padding">
-					<h3>Palette</h3>
-					<ul>
-						<li data-ng-repeat="feature in ctrl.models.templates"
-							dnd-type="'feature'"
-							dnd-draggable="feature"
-							dnd-effect-allowed="copy"
-							dnd-copied="feature.id = feature.id + 1">
-							<div class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}">
-							</div>
-						</li>
-					</ul>
-				</div>
-				<div data-ng-if="ctrl.models.selected" class="box box-grey box-padding">
-					<h3>Selected</h3>
-					<strong>Type: </strong> {{ctrl.models.selected.type}}
-					<br><input type="text"
-						data-ng-model="ctrl.models.selected.id"
-						class="form-control"
-						style="margin-top: 5px" />
+				<div class="panel panel-default">
+					<div class="panel-heading">Palette</div>
+					<div class="panel-body palette">
+						<ul>
+							<li data-ng-repeat="feature in ctrl.models.templates"
+								dnd-type="'feature'"
+								dnd-draggable="feature"
+								dnd-effect-allowed="copy"
+								dnd-copied="feature.id = feature.id + 1"
+								class="horizontal">
+								<div class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}">
+								</div>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		
 			<!-- Main area with designs -->
 			<div class="col-md-10">
-				<div class="row designs box box-yellow">
-					<!-- The designs also uses the list template -->
-					<h3>Designs</h3>
-					<ul dnd-list="ctrl.models.designs"
-						dnd-allowed-types="['design']">
-						<li data-ng-repeat="design in ctrl.models.designs"
-							dnd-type="'design'"
-							dnd-draggable="design"
-							dnd-effect-allowed="copy"
-							dnd-moved="ctrl.models.designs.splice($index, 1)"
-							dnd-selected="ctrl.models.selected = design"
-							data-ng-class="{selected: ctrl.models.selected === design}">
-							<div class="container-element box box-blue">
-			        			<h3>Design {{design.id}}</h3>
-			        			<div class="feature-panel">
-									<ul dnd-list="design.features"
-										dnd-allowed-types="['feature']">
-			        					<li data-ng-repeat="feature in design.features"
-											dnd-type="'feature'"
-			            					dnd-draggable="feature"
-			            					dnd-effect-allowed="move"
-			            					dnd-moved="design.features.splice($index, 1)"
-			            					dnd-selected="ctrl.models.selected = feature"
-			            					data-ng-class="{selected: ctrl.models.selected === feature}"
-			            					class="horizontal">
-											<div class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}">
-			        					</li>
-			    					</ul>
-								</div>
-			        			<div class="clearfix"></div>
-			    			</div>
-						</li>
-					</ul>
+				<div class="panel panel-default">
+					<div class="panel-heading">Designs</div>
+					<div class="panel-body designs">
+						<ul dnd-list="ctrl.models.designs"
+							dnd-allowed-types="['design']">
+							<li data-ng-repeat="design in ctrl.models.designs"
+								dnd-type="'design'"
+								dnd-draggable="design"
+								dnd-effect-allowed="move"
+								dnd-moved="ctrl.models.designs.splice($index, 1)"
+								dnd-selected="ctrl.models.selected = design"
+								data-ng-class="{selected: ctrl.models.selected === design}">
+								<div class="container-element box box-blue">
+				        			<h3>Design {{design.id}}</h3>
+				        			<div class="feature-panel">
+										<ul dnd-list="design.features"
+											dnd-allowed-types="['feature']">
+				        					<li data-ng-repeat="feature in design.features"
+												dnd-type="'feature'"
+				            					dnd-draggable="feature"
+				            					dnd-effect-allowed="move"
+				            					dnd-moved="design.features.splice($index, 1)"
+				            					dnd-selected="ctrl.models.selected = feature"
+				            					data-ng-class="{selected: ctrl.models.selected === feature}"
+				            					class="horizontal">
+												<div class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}">
+				        					</li>
+				    					</ul>
+									</div>
+				        			<div class="clearfix"></div>
+				    			</div>
+							</li>
+						</ul>
+					</div>
 				</div>
-		
-				<pre>{{ctrl.modelAsJson}}</pre>
 			</div>
 		</div>
     </div>
+    <pre>{{ctrl.modelAsJson}}</pre>
 </body>
