--- a/design/index.html
+++ b/design/index.html
@@ -31,7 +31,7 @@
 					</button>
 				</div>
 			</div>
-			<div class="designs">
+			<div class="designs panel-group">
 				<ul dnd-list="ctrl.models.designs"
 					dnd-allowed-types="['design']">
 					<li data-ng-repeat="design in ctrl.models.designs"
@@ -39,11 +39,10 @@
 						dnd-draggable="design"
 						dnd-effect-allowed="move"
 						dnd-moved="ctrl.models.designs.splice($index, 1)"
-						dnd-selected="ctrl.models.selected = design"
 						data-ng-class="{selected: ctrl.models.selected === design}">
-						<div class="box">
-		        			<h3>Design {{design.id}}</h3>
-		        			<div class="feature-panel">
+						<div class="design panel panel-default">
+		        			<div class="panel-heading">Design {{design.id}}</div>
+		        			<div class="panel-body">
 								<ul dnd-list="design.features"
 									dnd-allowed-types="['feature']">
 		        					<li data-ng-repeat="feature in design.features"
@@ -52,13 +51,11 @@
 		            					dnd-effect-allowed="move"
 		            					dnd-moved="design.features.splice($index, 1)"
 		            					dnd-selected="ctrl.models.selected = feature"
-		            					data-ng-class="{selected: ctrl.models.selected === feature}"
-		            					class="horizontal">
+		            					data-ng-class="{selected: ctrl.models.selected === feature}">
 										<div class="feature SO{{feature.typ.replace('http://purl.obolibrary.org/obo/SO_', '')}}">
 		        					</li>
 		    					</ul>
-							</div>
-		        			<div class="clearfix"></div>
+		        			</div>
 		    			</div>
 					</li>
 				</ul>
